# interactivebackground

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.regression.json
.github/scripts/: Import-WindowsCertificate.ps1  Publish-Checksums.ps1  Test-ReleaseSecrets.ps1  Write-ReleaseConfig.ps1
.github/workflows/: ci.yml  release.yml
docs/: BETA_ACCEPTANCE.md  CONTENT_SOURCES.md  ROADMAP.md  TECHNICAL_INCIDENTS.md
scripts/: check-bundle-budget.mjs
src/: App.css  App.tsx  BackgroundArtwork.tsx  ControlWindow.tsx  MonitorPreview.tsx  OnboardingWizard.tsx  UpdateControl.tsx  WallpaperSurface.tsx  WallpaperWindow.tsx  backgroundPresets.ts  clockFormat.ts  dailyContent.ts  main.tsx  pomodoroSound.ts  taskApi.ts  types.ts  useBackgroundSettings.ts  useDesktopWidgets.ts  useLayoutGrid.ts  useMonitors.ts  usePomodoroAlerts.ts  useSettings.ts  useTasks.ts  useTheme.ts  useWidgetLayout.ts  useWidgetStore.ts  widgetLayout.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  data_migration.rs  desktop_host.rs  desktop_integration.rs  lib.rs  main.rs  model.rs  monitors.rs  pomodoro_service.rs  settings.rs  store.rs
src/i18n/: index.ts
src/i18n/locales/: en.ts  tr.ts
tests/: frontend-regression.test.mjs
